# rust-rd-parser

./: Cargo.toml  DEPENDENCY_ARCHITECTURE_PLAN.md  README.md  build-wasm  build-wasm.sh  demo.html  package-lock.json  package.json  serve.js  test-comments.tbl  test-modifiers.tbl  test-wasm.js  test_distribution.rs
examples/: collection_demo.rs  diagnostic_demo.rs  expression_demo.rs  external_reference_test.rs  flag_diagnostic_demo.rs  modifier_demo.rs  modifier_reference.rs  optimization_demo.rs  parser_demo.rs  performance_demo.rs  test_distribution_comprehensive.rs  test_invalid_modifiers.rs  test_valid_modifiers.rs
examples/editor/: package-lock.json  package.json  vite.config.ts
examples/editor/public/: wasm
examples/editor/src/: App.css  App.tsx  index.css  tbl-language.ts  useTblWorker.ts
examples/editor/src/worker/: index.ts  language-server.ts  worker.ts
src/: ast.rs  collection.rs  diagnostic.rs  diagnostic_collector.rs  diagnostic_formatter.rs  errors.rs  lexer.rs  lib.rs  parser.rs  wasm.rs
src/data/: potion.tbl  syntax-test.tbl
vscode-tbl-extension/: README.md  language-configuration.json  package.json  tbl-language-support-0.1.0.vsix
vscode-tbl-extension/syntaxes/: tbl.tmLanguage.json
